force-app/main/default/objects/nepa_gis_data__c/fields/nepa_data_access_restriction__c.field-meta.xml
<CustomField>
    <fullName>nepa_data_access_restriction__c</fullName>
    <description>Data access restriction notes for this GIS dataset independent of the public-facing NEPA record. Used to flag datasets that may not be released in FOIA responses or public comment packages.</description>
    <inlineHelpText>Free-text notes on data access restrictions, FOIA exemptions, or tribal confidentiality protections applicable to this GIS layer.</inlineHelpText>
    <label>Data Access Restriction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>