force-app/main/default/objects/nepa_gis_data__c/fields/nepa_sensitivity_classification__c.field-meta.xml
<CustomField>
    <fullName>nepa_sensitivity_classification__c</fullName>
    <description>CUI sensitivity classification for this GIS dataset. Controls visibility to external parties. Aligns with NARA CUI registry categories.</description>
    <inlineHelpText>Controlled Unclassified Information classification. Set to indicate restricted access to sensitive GIS layers (e.g., tribal sacred sites, critical infrastructure).</inlineHelpText>
    <label>Sensitivity Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unclassified</fullName>
                <default>true</default>
                <label>Unclassified</label>
            </value>
            <value>
                <fullName>CUI</fullName>
            </value>
            <value>
                <fullName>CUI//FEDONLY</fullName>
            </value>
            <value>
                <fullName>CUI//SP-TRIBAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>